@@ -3,6 +3,8 @@ Changes from 0.12.1
    [ Language Changes ]
    * `let` has been removed. Python's scoping rules do not make a proper
      implementation of it possible. Use `setv` instead.
+   * Added bytestring literals, which create `bytes` objects under Python 3
+     and `str` objects under Python 2
    * Commas and underscores are allowed in numeric literals
    * xor: If exactly one argument is true, return it
 
